feat: make sidebar a component and be able to log out

--- a/styles/normal.css
+++ b/styles/normal.css
@@ -13,6 +13,6 @@
 .sidebar {
   @apply bg-side-light text-front-light dark:bg-side-dark;
 }
-.chat-window{
-  @apply normal-text normal-bg
+.chat-window {
+  @apply normal-text normal-bg;
 }
