feat: create footer and message form

--- a/styles/normal.css
+++ b/styles/normal.css
@@ -11,7 +11,7 @@
   @apply bg-side-light dark:bg-side-dark;
 }
 .sidebar {
-  @apply bg-side-light text-front-light dark:bg-side-dark;
+  @apply bg-side-light text-front-dark dark:bg-side-dark;
 }
 .chat-window {
   @apply normal-text normal-bg;
