--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .submit {
+    @apply rounded-md bg-hangin-100 px-4 py-2 text-white hover:bg-hangin-200;
+  }
+}
