--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .submit {
-    @apply rounded-md bg-hangin-100 px-4 py-2 text-white hover:bg-hangin-200;
+    @apply rounded-md bg-hangin-100 px-4 py-2 text-white hover:bg-hangin-200 disabled:bg-aiciple-light;
   }
 }
